Initialise globals on startup

Even though use of QWaylandClientExtension has the registry initialsed
on startup, there's a quirk of extension that it doesn't create itself right away.

We've seen that windows can change palettes on startup before the
event loop has run.

BUG: 452060